Fixing styling for consistency. Added navbar that is visible when inside app. Pages don't have their own separate navbars. Able to navigate across pages.

--- a/public/stylesheets/dash.css
+++ b/public/stylesheets/dash.css
@@ -74,5 +74,9 @@ h4 {
     padding: 15px 10px;
 }
 
+#dashNav {
+    margin-top: 80px;
+}
+
 
 
